[gd_scene load_steps=2 format=3 uid="uid://diqphdn4ib5q8"]

[ext_resource type="Script" uid="uid://7sv7j6hb04ya" path="res://addons/RPG_Maker_Database/Editors/Databases/trait_row.gd" id="1_4q5m7"]

[node name="TraitRow" type="HBoxContainer"]
script = ExtResource("1_4q5m7")

[node name="FunctionOption" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 25
popup/item_0/text = "Element Rate"
popup/item_0/id = 0
popup/item_1/text = "Debuff Rate"
popup/item_1/id = 1
popup/item_2/text = "State Rate"
popup/item_2/id = 2
popup/item_3/text = "State Resist"
popup/item_3/id = 3
popup/item_4/text = "Parameter"
popup/item_4/id = 4
popup/item_5/text = "Ex-Parameter"
popup/item_5/id = 5
popup/item_6/text = "Sp-Parameter"
popup/item_6/id = 6
popup/item_7/text = "Attack Element"
popup/item_7/id = 7
popup/item_8/text = "Attack State"
popup/item_8/id = 8
popup/item_9/text = "Attack Speed"
popup/item_9/id = 9
popup/item_10/text = "Attack Times +"
popup/item_10/id = 10
popup/item_11/text = "Attack Skill"
popup/item_11/id = 11
popup/item_12/text = "Add Skill Type"
popup/item_12/id = 12
popup/item_13/text = "Seal Skill Type"
popup/item_13/id = 13
popup/item_14/text = "Add Skill"
popup/item_14/id = 14
popup/item_15/text = "Seal Skill"
popup/item_15/id = 14
popup/item_16/text = "Equip Weapon"
popup/item_16/id = 15
popup/item_17/text = "Equip Armor"
popup/item_17/id = 16
popup/item_18/text = "Lock Equip"
popup/item_18/id = 17
popup/item_19/text = "Seal Equip"
popup/item_19/id = 18
popup/item_20/text = "Slot Type"
popup/item_20/id = 19
popup/item_21/text = "Action Times +"
popup/item_21/id = 20
popup/item_22/text = "Special Flag"
popup/item_22/id = 21
popup/item_23/text = "Collapse Effect"
popup/item_23/id = 22
popup/item_24/text = "Party Ability"
popup/item_24/id = 23

[node name="ElementOptionButton" type="OptionButton" parent="."]
layout_mode = 2
alignment = 1
selected = 0
allow_reselect = true
item_count = 4
popup/item_0/text = "Normal"
popup/item_0/id = 0
popup/item_1/text = "Water"
popup/item_1/id = 1
popup/item_2/text = "Ice"
popup/item_2/id = 2
popup/item_3/text = "Fire"
popup/item_3/id = 3

[node name="StatOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2
alignment = 1
selected = 0
allow_reselect = true
item_count = 8
popup/item_0/text = "Max HP"
popup/item_0/id = 0
popup/item_1/text = "Max MP"
popup/item_1/id = 1
popup/item_2/text = "Attack"
popup/item_2/id = 2
popup/item_3/text = "Defense"
popup/item_3/id = 3
popup/item_4/text = "M. Attack"
popup/item_4/id = 4
popup/item_5/text = "M. Defense"
popup/item_5/id = 5
popup/item_6/text = "Agility"
popup/item_6/id = 6
popup/item_7/text = "Luck"
popup/item_7/id = 7

[node name="ExOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2
alignment = 1
selected = 0
allow_reselect = true
item_count = 10
popup/item_0/text = "Hit Rate"
popup/item_0/id = 0
popup/item_1/text = "Evasion Rate"
popup/item_1/id = 1
popup/item_2/text = "Critical Rate"
popup/item_2/id = 2
popup/item_3/text = "Critical Evasion"
popup/item_3/id = 3
popup/item_4/text = "Magic Evasion"
popup/item_4/id = 4
popup/item_5/text = "Magic Reflection"
popup/item_5/id = 5
popup/item_6/text = "Counter Attack"
popup/item_6/id = 6
popup/item_7/text = "HP Regeneration"
popup/item_7/id = 7
popup/item_8/text = "MP Regeneration"
popup/item_8/id = 8
popup/item_9/text = "TP Regeneration"
popup/item_9/id = 9

[node name="SpOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2
alignment = 1
selected = 0
allow_reselect = true
item_count = 11
popup/item_0/text = "Target Rate"
popup/item_0/id = 0
popup/item_1/text = "Guard Effect"
popup/item_1/id = 1
popup/item_2/text = "Recovery Effect"
popup/item_2/id = 2
popup/item_3/text = "Pharmacology"
popup/item_3/id = 3
popup/item_4/text = "MP Cost Rate"
popup/item_4/id = 4
popup/item_5/text = "TP Charge Rate"
popup/item_5/id = 5
popup/item_6/text = "Physical Damage"
popup/item_6/id = 6
popup/item_7/text = "Magic Damage"
popup/item_7/id = 7
popup/item_8/text = "Floor Damage"
popup/item_8/id = 8
popup/item_9/text = "Experience"
popup/item_9/id = 9
popup/item_10/text = "Job Points"
popup/item_10/id = 10

[node name="StatusOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 1
popup/item_0/text = "000 Knockout"
popup/item_0/id = 0

[node name="SkillTypesOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 1
popup/item_0/text = "Special"
popup/item_0/id = 0

[node name="SkillOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 1
popup/item_0/text = "Attack"
popup/item_0/id = 0

[node name="WeaponOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2
allow_reselect = true

[node name="ArmorOptionButton" type="OptionButton" parent="."]
layout_mode = 2
selected = 0
allow_reselect = true

[node name="LockEquipOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 1
popup/item_0/text = "Attack"
popup/item_0/id = 0

[node name="SlotTypeOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 2
popup/item_0/text = "Normal"
popup/item_0/id = 0
popup/item_1/text = "Dual Wield"
popup/item_1/id = 1

[node name="SpecialFlagOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 4
popup/item_0/text = "Auto Battle"
popup/item_0/id = 0
popup/item_1/text = "Guard"
popup/item_1/id = 1
popup/item_2/text = "Substitute"
popup/item_2/id = 2
popup/item_3/text = "Preserve TP"
popup/item_3/id = 3

[node name="CollapseEffectOptionButton" type="OptionButton" parent="."]
visible = false
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 4
popup/item_0/text = "Normal"
popup/item_0/id = 0
popup/item_1/text = "Boss"
popup/item_1/id = 1
popup/item_2/text = "Instant"
popup/item_2/id = 2
popup/item_3/text = "No Disappear"
popup/item_3/id = 3

[node name="PartyAbility" type="OptionButton" parent="."]
visible = false
layout_mode = 2
selected = 0
allow_reselect = true
item_count = 6
popup/item_0/text = "Encounter Half"
popup/item_0/id = 0
popup/item_1/text = "Encounter None"
popup/item_1/id = 1
popup/item_2/text = "Cancel Surprise"
popup/item_2/id = 2
popup/item_3/text = "Raise Preemptive"
popup/item_3/id = 3
popup/item_4/text = "Gold Double"
popup/item_4/id = 4
popup/item_5/text = "Drop Item Double"
popup/item_5/id = 5

[node name="PercentMultiplierSpinBox" type="SpinBox" parent="."]
layout_mode = 2
max_value = 1000.0
value = 100.0
update_on_text_changed = true
prefix = "*"
suffix = "%"

[node name="AdditiveSpinBox" type="SpinBox" parent="."]
visible = false
layout_mode = 2
max_value = 9999.0

[node name="DeleteButton" type="Button" parent="."]
visible = false
layout_mode = 2
text = "X"

[connection signal="item_selected" from="FunctionOption" to="." method="_on_function_option_item_selected"]
[connection signal="button_down" from="ElementOptionButton" to="." method="_on_element_option_button_button_down"]
[connection signal="item_selected" from="ElementOptionButton" to="." method="_on_argument_option_selected"]
[connection signal="item_selected" from="StatOptionButton" to="." method="_on_stat_option_button_item_selected"]
[connection signal="item_selected" from="ExOptionButton" to="." method="_on_ex_option_button_item_selected"]
[connection signal="item_selected" from="SpOptionButton" to="." method="_on_sp_option_button_item_selected"]
[connection signal="button_down" from="StatusOptionButton" to="." method="_on_status_option_button_button_down"]
[connection signal="item_selected" from="StatusOptionButton" to="." method="_on_status_option_button_item_selected"]
[connection signal="button_down" from="SkillTypesOptionButton" to="." method="_on_skill_types_option_button_button_down"]
[connection signal="item_selected" from="SkillTypesOptionButton" to="." method="_on_skill_types_option_button_item_selected"]
[connection signal="button_down" from="SkillOptionButton" to="." method="_on_skill_option_button_button_down"]
[connection signal="item_selected" from="SkillOptionButton" to="." method="_on_skill_option_button_item_selected"]
[connection signal="item_selected" from="WeaponOptionButton" to="." method="_on_weapon_option_button_item_selected"]
[connection signal="item_selected" from="ArmorOptionButton" to="." method="_on_armor_option_button_item_selected"]
[connection signal="item_selected" from="LockEquipOptionButton" to="." method="_on_lock_equip_option_button_item_selected"]
[connection signal="item_selected" from="SlotTypeOptionButton" to="." method="_on_slot_type_option_button_item_selected"]
[connection signal="item_selected" from="SpecialFlagOptionButton" to="." method="_set_argument"]
[connection signal="item_selected" from="CollapseEffectOptionButton" to="." method="_set_argument"]
[connection signal="item_selected" from="PartyAbility" to="." method="_set_argument"]
[connection signal="value_changed" from="PercentMultiplierSpinBox" to="." method="on_value_changed"]
[connection signal="value_changed" from="AdditiveSpinBox" to="." method="on_value_changed"]
[connection signal="button_down" from="DeleteButton" to="." method="_on_delete_button_button_down"]
